No more java 11 stuff :'(